--- a/package.json
+++ b/package.json
@@ -9,11 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.7",
     "autoprefixer": "10.4.14",
+    "bootstrap": "^5.2.3",
+    "jquery": "^3.7.0",
     "next": "13.4.4",
     "postcss": "8.4.23",
     "react": "18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
+    "react-router-dom": "^6.11.2",
+    "react-toastify": "^9.1.3",
     "tailwindcss": "3.3.2"
   }
 }
